# MPI_Benchmarks

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Manager.cxx  Node.cxx  Node.h  Node_master.cxx  Node_slave.cxx  README.md  dynamic.c  dynamic.cxx  extrae_template.xml  main.cxx
cholesky-blocked_mpi/: CMakeLists.txt  cholesky.awk  cholesky_babis.awk  mkl_cholesky_blocks.c  mkl_cholesky_columns.c  mpi_cholesky_blocks.c  mpi_cholesky_blocks_blocking.c  mpi_cholesky_blocks_nonblocking.c  mpi_cholesky_blocks_nonblocking_omp.c  submit_mn.sh  submit_nord.sh  submiter_mn.sh  submiter_nord.sh  util.c  util.h
cholesky_blocked_mpi_outdated/: cholesky.awk  mkl_cholesky_columns.c  mkl_cholesky_rows.c  mpi_cholesky_blocks_blocking.c  submit_mn.sh  submit_nord.sh  util.c
cholesky_mpi/: CMakeLists.txt  cholesky.c  cholesky_omp_mpi.c  cholesky_omp_mpi.h  util.c
cholesky_mpi2_outdated/: util.c  util.h
cholesky_mpi2_outdated/cholesky_mpi/: CMakeLists.txt
cmake/: FindExtrae.cmake  FindINTEL.cmake  FindMKL.cmake  FindOpenBlas.cmake
common/: CMakeLists.txt  CommandLine.cpp  CommandLine.hpp  CommandLineParameter.hpp  Multitimer.hpp  Report.cpp  Report.hpp  ReportEntry.hpp  ReportEntryWithDefaultValue.hpp  Reportable.hpp  Timer.hpp  TypeName.hpp  VersionInfo.hpp  VersionInfo.hpp.in  benchmarks.h
common/.deps/: libnanos6_benchmark_support_la-CommandLine.Plo  libnanos6_benchmark_support_la-Report.Plo
daxpy_mpi/: profile_daxpy.sh  submit.sh
daxpy_mpi_outdated/: CMakeLists.txt  daxpy-mpi.c  daxpy-mpi.h  driver.cxx  run_daxpy.sh
dynamic_process_mpi/: CMakeLists.txt  Manager.cxx  Node.cxx  dynamic.cpp  gnuplot.plt  test1.sh  test2.sh  test3.sh  test_shrink.sh
dynamic_process_mpi_outdated/: CMakeLists.txt  Node.cxx  Node.h  Node_slave.cxx  dynamic.cpp  main.cxx  test_spawn.sh
jacobi_mpi/: CMakeLists.txt  jacobi_base.c  jacobi_mpi.c  jacobi_mpi.h  jacobi_omp_mpi.c  jacobi_omp_mpi.h  jacobi_parallelfor_mpi.c  jacobi_serial.c  jacobi_task_mpi.c  submit_mn.sh  submiter_mn.sh
malleability_mpi/: CMakeLists.txt  Malleability.cxx
matmul_matvec_mpi/: CMakeLists.txt  matmul_omp_mpi.c  prove.py  validate.py
matmul_mpi/: CMakeLists.txt  driver.cxx  matmul-mpi.c  matmul_omp_mpi.c  prove.py  submit_mn.sh  submiter_mn.sh
matvec_mpi/: CMakeLists.txt  driver.cxx  matvec-mpi.c  matvec-mpi.h  matvec.c  matvec.h  matvec_omp_mpi.cpp  profile_matvec.sh  run_matvec.sh
matvec_mpi_delete/: CMakeLists.txt  matvec_omp_mpi.cpp
matvec_mpi_pthreads/: .#matvec-mpi.c  CMakeLists.txt  driver.cxx  matvec-mpi-pthreads.c  matvec-mpi-pthreads.h
mpi_daxpy/: CMakeLists.txt  daxpy-mpi.c  daxpy-mpi.h  driver.cxx  profile-daxpy.sh  profile_daxpy.sh  run_daxpy.sh  submit.sh
mpi_dynamic_process/: CMakeLists.txt  Manager.cxx  Node.cxx  Node.h  Node_master.cxx  Node_slave.cxx  README.md  gnuplot.plt  test1.sh  test2.sh  test3.sh
mpi_k-mean/: CMakeLists.txt  k-mean-mpi.c  profile-daxpy.sh  prove.py
mpi_k-mean_outdated/: k-mean-mpi.h
mpi_matmul/: CMakeLists.txt  Makefile  driver.cxx  gnuplot.plt  matmul-mpi.c  matmul-mpi.h  profile-matmul.sh  prove.py  submit-matmul.sh  submit.sh
mpi_matvec/: CMakeLists.txt  driver.cxx  matvec-mpi.c  matvec-mpi.h  profile_matvec.sh  prove.py  run_matvec.sh
old/: main.c  main2.c
send_small_mpi/: CMakeLists.txt  extrae_template.xml  normal_mpi.c  trace.sh  type_mpi.c
utils/: benchmarks_mpi.h  create_trace.py  extrae_template.xml  gnuplot.plt  graph.py  process.py  process_dim.py  submit_dim.sh  submit_extrae.sh  submit_mn.sh  submiter_dim.sh  submiter_mn.sh  submitter_dim.sh  trace.sh
